@@ -5,6 +5,10 @@ import static org.springframework.security.oauth2.core.endpoint.OAuth2ParameterN
 import static org.springframework.security.web.header.writers.ClearSiteDataHeaderWriter.Directive.ALL;
 
 import de.otto.platform.gitactionboard.domain.AuthenticationMechanism;
+import jakarta.annotation.PostConstruct;
+import jakarta.servlet.ServletContext;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -13,11 +17,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-import javax.annotation.PostConstruct;
-import javax.servlet.ServletContext;
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServletRequest;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
@@ -41,14 +40,11 @@ import org.springframework.security.web.header.writers.ClearSiteDataHeaderWriter
 import org.springframework.util.StringUtils;
 
 @EnableWebSecurity
+@Configuration
 public class WebSecurityConfig {
 
   public static final String LOGIN_PATH = "/#/login";
   public static final String DASHBOARD_PATH = "/#/workflow-jobs";
-
-  private static HttpSecurity getDefaultSettings(HttpSecurity http) throws Exception {
-    return http.cors().disable().csrf().disable().formLogin().disable();
-  }
 
   @Bean
   public List<AuthenticationMechanism> availableAuths(
@@ -80,23 +76,18 @@ public class WebSecurityConfig {
     final String healthEndPoint = String.format("%s/health", actuatorBasePath);
 
     final String[] whitelistUrls = {
-      healthEndPoint,
-      "/config",
-      "/",
-      "/index.html",
-      "/css/**",
-      "/js/**",
-      "/img/**",
-      "/favicon.ico",
-      "/login/basic"
+      healthEndPoint, "/config", "/", "/index.html", "/assets/**", "/favicon.ico", "/login/basic"
     };
 
-    getDefaultSettings(http)
-        .requestMatchers()
-        .antMatchers(whitelistUrls)
-        .and()
-        .authorizeRequests()
-        .antMatchers(whitelistUrls)
+    http.cors()
+        .disable()
+        .csrf()
+        .disable()
+        .formLogin()
+        .disable()
+        .securityMatcher(whitelistUrls)
+        .authorizeHttpRequests()
+        .requestMatchers(whitelistUrls)
         .permitAll();
 
     return http.build();
@@ -133,7 +124,7 @@ public class WebSecurityConfig {
                       .password(authDetails.getValue())
                       .authorities("ROLE_USER")
                       .build())
-          .collect(Collectors.toList());
+          .toList();
     }
 
     @Bean("basicAuthenticationManager")
@@ -163,8 +154,6 @@ public class WebSecurityConfig {
 
       http.cors()
           .disable()
-          .csrf()
-          .disable()
           .formLogin()
           .usernameParameter("username")
           .passwordParameter("password")
@@ -174,9 +163,9 @@ public class WebSecurityConfig {
           .defaultSuccessUrl(DASHBOARD_PATH, true)
           .failureUrl(LOGIN_PATH)
           .and()
-          .requestMatcher(
+          .securityMatcher(
               request -> githubAuthDisabled || getAuthToken(request).startsWith("Basic"))
-          .authorizeRequests()
+          .authorizeHttpRequests()
           .anyRequest()
           .authenticated()
           .and()
@@ -222,17 +211,15 @@ public class WebSecurityConfig {
         throws Exception {
       http.cors()
           .disable()
-          .csrf()
-          .disable()
           .formLogin()
           .disable()
           .httpBasic()
           .disable()
-          .authorizeRequests()
-          .antMatchers("/login/oauth2/**", "/oauth2/**")
+          .authorizeHttpRequests()
+          .requestMatchers("/login/oauth2/**", "/oauth2/**")
           .permitAll()
           .and()
-          .authorizeRequests()
+          .authorizeHttpRequests()
           .anyRequest()
           .authenticated()
           .and()
